--- a/index.html
+++ b/index.html
@@ -7,31 +7,59 @@
     <title>FootBall</title>
     <!--Import Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Import CSS -->
-    <link type="text/css" rel="stylesheet" href="/css/materialize.css">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="/css/styles.css">
     <!-- Import Icon Ios -->
     <link rel="apple-touch-icon" href="/assets/Torque512x512.png">
     <link rel="shortcut icon" href="/assets/Torque512x512.png">
     <!-- Import manifest -->
-    <link rel="manifest" href="manifest.json">
+    <!-- <link rel="manifest" href="manifest.json"> -->
     <meta name="theme-color" content="#00acc1 cyan darken" />
 </head>
 
 <body>
 
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
+    <!-- Navbar -->
+    <div class="navbar ">
+        <nav class="#c5cae9 indigo lighten-4">
+            <div class="nav-wrapper container ">
+                <a href="#home" class="brand-logo waves-effect">Logo</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="topnav right hide-on-med-and-down"></ul>
+                <ul class="sidenav" id="mobile-demo">
+                    <li>
+                        <div class="user-view">
+                            <div class="background">
+
+                                <img src="/assets/stadium1.png" class="responsive-img" alt="Stadium">
+                            </div>
+                            <br>
+                            <img class="circle responsive-img" src="assets/ball.jpg" alt="Ball">
+                            <br>
+                            <!-- <span class="white-text name">Welcome Back Maul</span>
+                            <span class="white-text email">maulanairfanf@gmail.com</span> -->
+                        </div>
+                    </li>
+                    <li><a href="#home"><i class="material-icons">home</i>Home</a></li>
+                    <li><a href="#favorite"><i class="material-icons">favorite</i>Favorite</a></li>
+                    <li><a href="#about"><i class="material-icons">info</i>About</a></li>
                 </ul>
             </div>
         </nav>
     </div>
+
+    <!-- Body -->
+    <div id="body-render" class="container">
+
+    </div>
+
+
+    <!-- Import JS -->
+    <script type="text/javascript" src="/js/sw.js"></script>
+    <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/js/navbar.js"></script>
 </body>
 
 </html>
