--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,6 @@
-<h1>this home</h1>
+<div class="home">
+    <h3 class="center">Search Your Areas</h3>
+    <div class="row" id="country">
+
+    </div>
+</div>
