--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="navbar ">
         <nav class="#c5cae9 indigo lighten-4">
             <div class="nav-wrapper container ">
-                <a href="#home" class="brand-logo waves-effect">Logo</a>
+                <a href="#home" class="brand-logo waves-effect">Fovers</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="topnav right hide-on-med-and-down"></ul>
                 <ul class="sidenav" id="mobile-demo">
@@ -59,6 +59,7 @@
     <script type="text/javascript" src="/js/sw.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/navbar.js"></script>
+    <script type="text/javascript" src="js/country.js"></script>
 </body>
 
 </html>
