get country with function

--- a/country.html
+++ b/country.html
@@ -25,7 +25,7 @@
         <nav class="#c5cae9 indigo lighten-4">
             <div class="nav-wrapper container ">
                 <a href="#home" class="brand-logo waves-effect">Fovers</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">arrow_back</i></a>
                 <ul class="topnav right hide-on-med-and-down"></ul>
                 <ul class="sidenav" id="mobile-demo">
                     <li>
@@ -59,7 +59,6 @@
  
     <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
-    <script type="text/javascript" src="/js/navbar.js"></script>
     <script type="text/javascript" src="js/country.js"></script>
     <script type="text/javascript" src="/js/sw.js"></script>
    
