--- a/country.html
+++ b/country.html
@@ -11,11 +11,11 @@
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="/css/styles.css">
     <!-- Import Icon Ios -->
-    <link rel="apple-touch-icon" href="/assets/Torque512x512.png">
-    <link rel="shortcut icon" href="/assets/Torque512x512.png">
+    <link rel="apple-touch-icon" href="/assets/Fovers512x512.png">
+    <link rel="shortcut icon" href="/assets/Fovers512x512.png">
     <!-- Import manifest -->
-    <!-- <link rel="manifest" href="manifest.json"> -->
-    <meta name="theme-color" content="#00acc1 cyan darken" />
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#c5cae9" />
 </head>
 
 <body>
@@ -25,7 +25,8 @@
         <nav class="#c5cae9 indigo lighten-4">
             <div class="nav-wrapper container ">
                 <a href="#home" class="brand-logo waves-effect">Fovers</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">arrow_back</i></a>
+                <a href="./index.html" data-target="mobile-demo" class="sidenav-trigger"><i
+                        class="material-icons">arrow_back</i></a>
                 <ul class="topnav right hide-on-med-and-down"></ul>
                 <ul class="sidenav" id="mobile-demo">
                     <li>
@@ -56,12 +57,33 @@
 
 
     <!-- Import JS -->
- 
+
     <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/country.js"></script>
+    <!-- <script type="text/javascript" src="/js/navbar.js"></script> -->
+
     <script type="text/javascript" src="/js/sw.js"></script>
-   
+    <script>
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", function () {
+                navigator.serviceWorker
+                    .register("./service-worker.js")
+                    .then(function () {
+                        console.log("Pendaftaran ServiceWorker berhasil");
+                    })
+                    .catch(function () {
+                        console.log("Pendaftaran ServiceWorker gagal");
+                    });
+            });
+        } else {
+            console.log("ServiceWorker belum didukung browser ini.");
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            getCountrysByName();
+        })
+    </script>
 </body>
 
 </html>
