--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,41 @@
-<h1>this about</h1>
+<div class="about">
+    <div class="container">
+        <div class="col s12 ">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/assets/kiper.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Information<i
+                            class="material-icons right">more_vert</i></span>
+                    <!-- <p><a href="#">This is a link</a></p> -->
+                </div>
+                <div class="card-reveal center">
+                    <span class="card-title grey-text text-darken-4">Information<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col s12">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="/assets/jugling.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">frequently asked question<i
+                            class="material-icons right">more_vert</i></span>
+                    <!-- <p><a href="#">This is a link</a></p> -->
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">frequently asked question<i
+                            class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
