--- a/country.html
+++ b/country.html
@@ -24,7 +24,7 @@
     <div class="navbar ">
         <nav class="#c5cae9 indigo lighten-4">
             <div class="nav-wrapper container ">
-                <a href="#home" class="brand-logo waves-effect">Fovers</a>
+                <a href="home" class="brand-logo waves-effect">Fovers</a>
                 <a href="./index.html" data-target="mobile-demo" class="sidenav-trigger"><i
                         class="material-icons">arrow_back</i></a>
                 <ul class="topnav right hide-on-med-and-down"></ul>
@@ -61,7 +61,7 @@
     <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/country.js"></script>
-    <!-- <script type="text/javascript" src="/js/navbar.js"></script> -->
+    <script type="text/javascript" src="/js/navbar.js"></script>
 
     <script type="text/javascript" src="/js/sw.js"></script>
     <script>
