--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,3 @@
-<li><a href="#home.html">Home</a></li>
+<li><a href="#home">Home</a></li>
 <li><a href="#favorite">Favorite</a></li>
 <li><a href="#about">About</a></li>
