--- a/liga.html
+++ b/liga.html
@@ -30,6 +30,9 @@
       </div>
 
       <!-- Body -->
+      <div class="progress" id="loader">
+            <div class="indeterminate" id=""></div>
+        </div>
       <div class="liga container">
             <h3 class="center" id="body-render-country-liga"></h3>
             <div class="row center" id="body-render-liga">
