--- a/liga.html
+++ b/liga.html
@@ -32,12 +32,15 @@
       <!-- Body -->
       <div class="progress" id="loader">
             <div class="indeterminate" id=""></div>
-        </div>
+      </div>
       <div class="liga container">
             <h3 class="center" id="body-render-country-liga"></h3>
             <div class="row center" id="body-render-liga">
 
-            </div>
+            </div>            
+            <a class="waves-effect waves-light btn-large" ><i class="material-icons left">favorite</i>Add to favourite</a>
+
+            <a class="waves-effect waves-light btn-large" href="index.html"><i class="material-icons left">arrow_back</i>button</a>
       </div>
 
 
