offline fetch data

--- a/liga.html
+++ b/liga.html
@@ -37,10 +37,14 @@
             <h3 class="center" id="body-render-country-liga"></h3>
             <div class="row center" id="body-render-liga">
 
-            </div>            
-            <a class="waves-effect waves-light btn-large" ><i class="material-icons left">favorite</i>Add to favourite</a>
-
-            <a class="waves-effect waves-light btn-large" href="index.html"><i class="material-icons left">arrow_back</i>button</a>
+            </div>
+            <div class="center">
+                  <a class="waves-effect waves-light btn-large col s12 m6"><i class="material-icons left">add</i>Add to
+                        favourite</a>
+                        <br>
+                  <a class="waves-effect waves-light btn-large col s12 m6" href="index.html"><i
+                              class="material-icons left">arrow_back</i>Back To Home</a>
+            </div>
       </div>
 
 
