--- a/liga.html
+++ b/liga.html
@@ -39,7 +39,7 @@
 
             </div>
             <div class="center">
-                  <a class="waves-effect waves-light btn-large col s12 m6"><i class="material-icons left">add</i>Add to
+                  <a class="waves-effect waves-light btn-large col s12 m6" id="add"><i class="material-icons left">add</i>Add to
                         favourite</a>
                         <br>
                   <a class="waves-effect waves-light btn-large col s12 m6" href="index.html"><i
