--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <script type="text/javascript" src="/js/navbar.js"></script>
     <script type="text/javascript" src="js/country.js"></script>
     <script type="text/javascript" src="/js/sw.js"></script>
-    <script src="js/idb.js"></script>
+    <script type="text/javascript" src="js/idb.js"></script>
+    <script type="text/javascript" src="js/db.js"></script>
     <script>
          document.addEventListener("DOMContentLoaded", function () {
                   getCountrys();
