--- a/liga.html
+++ b/liga.html
@@ -58,12 +58,30 @@
       <script src="js/db.js"></script>
       <script>
             document.addEventListener("DOMContentLoaded", function () {
-                  var item = getLigaByName();
-                  var save = document.getElementById("add");
-                  save.onclick = function () {
+                  var urlParams = new URLSearchParams(window.location.search);
+                  var isFromSaved = urlParams.get("saved");
+
+                  var btnSave = document.getElementById("add");
+
+                  if (isFromSaved){
+                        btnSave.style.display = 'none';
+
+                        getSavedCountryById();
+                  }
+                  else{
+                        var item = getLigaByName();
+                  }
+
+                  // var save = document.getElementById("add");
+                  btnSave.onclick = function () {
                         console.log("Tombol FAB di klik.");
-                        item.then(function(country){
-                              saveForLater(country);
+                        item.then(function (country) {
+                              // console.log(country.competitions[0].area.id)
+                              saveForLater(country.competitions[0].area)
+                              // country.then(function (competition) {
+                              //       saveForLater(competitions.id);
+                              // })
+
                         })
                   }
             });
