--- a/pages/favorite.html
+++ b/pages/favorite.html
@@ -1,1 +1,7 @@
-<h1>this favorite</h1>
+<div class="home">
+    <!-- <h3 class="center">Search Your Areas</h3> -->
+    <div class="row" id="country">
+
+    </div>
+</div>
+
