--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="navbar ">
         <nav class="#c5cae9 indigo lighten-4">
             <div class="nav-wrapper container ">
-                <a href="index.html" class="brand-logo waves-effect">Fovers</a>
+                <a href="#home" class="brand-logo waves-effect">Fovers</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="topnav right hide-on-med-and-down"></ul>
                 <ul class="sidenav" id="mobile-demo">
@@ -70,10 +70,11 @@
     <script type="text/javascript" src="/js/sw.js"></script>
     <script type="text/javascript" src="js/idb.js"></script>
     <script type="text/javascript" src="js/db.js"></script>
+    <script src="js/fromSave.js"></script>
     <script>
-         document.addEventListener("DOMContentLoaded", function () {
-                  getCountrys();
-            });
+        document.addEventListener("DOMContentLoaded", function () {
+            getCountrys();
+        });
     </script>
 </body>
 
