--- a/pages/favorite.html
+++ b/pages/favorite.html
@@ -1,6 +1,5 @@
 <div class="home">
-    <!-- <h3 class="center">Search Your Areas</h3> -->
-    <div class="row" id="country">
+    <div class="row" id="">
 
     </div>
 </div>
