--- a/liga.html
+++ b/liga.html
@@ -69,7 +69,7 @@
             <a href=""></a>
             <br>
             <a class="waves-effect waves-light btn-large col s12 m6" id="delete" href="index.html#favorite"><i
-                    class="material-icons left">arrow_back</i>delete</a>
+                    class="material-icons left">delete</i>delete</a>
             <a href=""></a>
 
         </div>
@@ -87,6 +87,7 @@
     <script type="text/javascript" src="js/fromSave.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
+
             var urlParams = new URLSearchParams(window.location.search);
             var isFromSaved = urlParams.get("saved");
             var idParam = urlParams.get("id");
