--- a/liga.html
+++ b/liga.html
@@ -85,7 +85,7 @@
     <script type="text/javascript" src="js/idb.js"></script>
     <script type="text/javascript" src="js/db.js"></script>
     <script type="text/javascript" src="js/fromSave.js"></script>
-    <script>
+    <!-- <script>
         document.addEventListener("DOMContentLoaded", function () {
 
             var urlParams = new URLSearchParams(window.location.search);
@@ -124,7 +124,7 @@
 
 
         
-    </script>
+    </script> -->
 
 </body>
 
