--- a/index.html
+++ b/index.html
@@ -63,16 +63,11 @@
     <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/navbar.js"></script>
-    <script type="text/javascript" src="js/country.js"></script>
+    <script type="text/javascript" src="/js/country.js"></script>
     <script type="text/javascript" src="/js/sw.js"></script>
-    <script type="text/javascript" src="js/idb.js"></script>
-    <script type="text/javascript" src="js/db.js"></script>
-    <script src="js/fromSave.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            getCountrys();
-        });
-    </script>
+    <script type="text/javascript" src="/js/idb.js"></script>
+    <script type="text/javascript" src="/js/db.js"></script>
+    <script type="text/javascript" src="/js/notification.js"></script>
 </body>
 
 </html>
