--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/navbar.js"></script>
     <script type="text/javascript" src="/js/country.js"></script>
-    <script type="text/javascript" src="/js/sw.js"></script>
     <script type="text/javascript" src="/js/idb.js"></script>
     <script type="text/javascript" src="/js/db.js"></script>
     <script type="text/javascript" src="/js/notification.js"></script>
@@ -98,9 +97,28 @@
                         return;
                     }
 
-                    navigator.serviceWorker.getRegistration().then(function (reg) {
-                        reg.showNotification('Notifikasi diijinkan!');
-                    });
+                    if (('PushManager' in window)) {
+                        navigator.serviceWorker.getRegistration().then(function (registration) {
+                            registration.pushManager.subscribe({
+                                userVisibleOnly: true,
+                                applicationServerKey: urlBase64ToUint8Array(
+                                    "BBQhA2diN6LUIJK8cFXPhehrK6kxjOOomIzB_8Y7UA77UMUYNF6N6X_wFvSITdH7vR7i9m7FflVyKrwzfOw4h1Y"
+                                    )
+                            }).then(function (subscribe) {
+                                console.log('Berhasil melakukan subscribe dengan endpoint: ',
+                                    subscribe.endpoint);
+                                console.log('Berhasil melakukan subscribe dengan p256dh key: ',
+                                    btoa(String.fromCharCode.apply(
+                                        null, new Uint8Array(subscribe.getKey('p256dh'))
+                                    )));
+                                console.log('Berhasil melakukan subscribe dengan auth key: ',
+                                    btoa(String.fromCharCode.apply(
+                                        null, new Uint8Array(subscribe.getKey('auth')))));
+                            }).catch(function (e) {
+                                console.error('Tidak dapat melakukan subscribe ', e.message);
+                            });
+                        });
+                    }
                 });
 
             }
