add standings data

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="/css/styles.css">
     <!-- Import Icon Ios -->
-    <link rel="apple-touch-icon" href="/assets/Torque512x512.png">
-    <link rel="shortcut icon" href="/assets/Torque512x512.png">
+    <link rel="apple-touch-icon" href="/assets/Fovers512x512.png">
+    <link rel="shortcut icon" href="/assets/Fovers512x512.png">
     <!-- Import manifest -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#c5cae9" />
@@ -63,10 +63,9 @@
     <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/navbar.js"></script>
-    <script type="text/javascript" src="/js/country.js"></script>
+    <script type="text/javascript" src="/js/api.js"></script>
     <script type="text/javascript" src="/js/idb.js"></script>
     <script type="text/javascript" src="/js/db.js"></script>
-    <script type="text/javascript" src="/js/notification.js"></script>
     <script>
         if (!('serviceWorker' in navigator)) {
             console.log("Service worker tidak didukung browser ini.");
@@ -137,9 +136,7 @@
             return outputArray;
         }
 
-        //     document.addEventListener("DOMContentLoaded", function () {
-        //   getTeams();
-        // });
+        
     </script>
 </body>
 
