--- a/liga.html
+++ b/liga.html
@@ -10,6 +10,12 @@
     <!-- Import CSS -->
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="/css/styles.css">
+    <!-- Import Icon Ios -->
+    <link rel="apple-touch-icon" href="/assets/Fovers512x512.png">
+    <link rel="shortcut icon" href="/assets/Fovers512x512.png">
+    <!-- Import manifest -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#c5cae9" />
 </head>
 
 <body>
@@ -35,17 +41,18 @@
         </div>
         <div class="center" id="body-render-country-liga"></div>
         <div class="center" id="button">
-            <a class="waves-effect waves-light btn-large col s12 m6" id="add"><i class="material-icons left">add</i>Add
+            <a class="waves-effect waves-light btn col s12 m12" id="btnBackFavorite" href="./index.html#favorite"><i
+                    class="material-icons left">arrow_back</i>Back To Favorite</a>
+            <br>
+            <a class="waves-effect waves-light col s12 m12 btn" id="delete" href="index.html#favorite"><i
+                    class="material-icons left">delete</i>Delete</a>
+            <a class="waves-effect waves-light col s12 12 btn" id="back" href="index.html"><i
+                    class="material-icons left">arrow_back</i>Back</a>
+            <br>
+            <a class="waves-effect waves-light col s12 m12 btn" id="add"><i class="material-icons left">add</i>Add
                 to
                 favourite</a>
-            <br>
-            <a class="waves-effect waves-light btn-large col s12 m6" id="back" href="index.html"><i
-                    class="material-icons left">arrow_back</i>Back To Home</a>
-            <a href=""></a>
-            <br>
-            <a class="waves-effect waves-light btn-large col s12 m6" id="delete" href="index.html#favorite"><i
-                    class="material-icons left">delete</i>delete</a>
-            <a href=""></a>
+
 
         </div>
     </div>
