--- a/team.html
+++ b/team.html
@@ -10,6 +10,12 @@
     <!-- Import CSS -->
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="/css/styles.css">
+    <!-- Import Icon Ios -->
+    <link rel="apple-touch-icon" href="/assets/Fovers512x512.png">
+    <link rel="shortcut icon" href="/assets/Fovers512x512.png">
+    <!-- Import manifest -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#c5cae9" />
 </head>
 
 <body>
