--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
                 <div class="card-reveal center">
                     <span class="card-title grey-text text-darken-4">Information<i
                             class="material-icons right">close</i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    <p>Hai ini adalah Website Fovers singkatan dari Football Lovers Website ini ditujukan untuk orang orang yang ingin melihat informasi seputar SepakBola di seluruh dunia</p>
                 </div>
             </div>
         </div>
@@ -30,7 +30,8 @@
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">frequently asked question<i
                             class="material-icons right">close</i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    <p>Menyimpan negara faovorit ? cukup klik negara yang di inginkan lalu klik tombol favorite</p>
+                    <p>Menghapus negara favorit ? cukup ke menu favorit lalu klik negara yang ingin di hapus</p>
                 </div>
             </div>
         </div>
