--- a/index.html
+++ b/index.html
@@ -66,76 +66,9 @@
     <script type="text/javascript" src="/js/api.js"></script>
     <script type="text/javascript" src="/js/idb.js"></script>
     <script type="text/javascript" src="/js/db.js"></script>
-    <script>
-        if (!('serviceWorker' in navigator)) {
-            console.log("Service worker tidak didukung browser ini.");
-        } else {
-            registerServiceWorker();
-            requestPermission();
-        }
-        // Register service worker
-        function registerServiceWorker() {
-            return navigator.serviceWorker.register('./service-worker.js')
-                .then(function (registration) {
-                    console.log('Registrasi service worker berhasil.');
-                    return registration;
-                })
-                .catch(function (err) {
-                    console.error('Registrasi service worker gagal.', err);
-                });
-        }
+    <script type="text/javascript" src="/js/notification.js"></script>
+    <script type="text/javascript" src="/js/push.js"></script>
 
-        function requestPermission() {
-            if ('Notification' in window) {
-                Notification.requestPermission().then(function (result) {
-                    if (result === "denied") {
-                        console.log("Fitur notifikasi tidak diijinkan.");
-                        return;
-                    } else if (result === "default") {
-                        console.error("Pengguna menutup kotak dialog permintaan ijin.");
-                        return;
-                    }
-
-                    if (('PushManager' in window)) {
-                        navigator.serviceWorker.getRegistration().then(function (registration) {
-                            registration.pushManager.subscribe({
-                                userVisibleOnly: true,
-                                applicationServerKey: urlBase64ToUint8Array(
-                                    "BBQhA2diN6LUIJK8cFXPhehrK6kxjOOomIzB_8Y7UA77UMUYNF6N6X_wFvSITdH7vR7i9m7FflVyKrwzfOw4h1Y"
-                                    )
-                            }).then(function (subscribe) {
-                                console.log('Berhasil melakukan subscribe dengan endpoint: ',
-                                    subscribe.endpoint);
-                                console.log('Berhasil melakukan subscribe dengan p256dh key: ',
-                                    btoa(String.fromCharCode.apply(
-                                        null, new Uint8Array(subscribe.getKey('p256dh'))
-                                    )));
-                                console.log('Berhasil melakukan subscribe dengan auth key: ',
-                                    btoa(String.fromCharCode.apply(
-                                        null, new Uint8Array(subscribe.getKey('auth')))));
-                            }).catch(function (e) {
-                                console.error('Tidak dapat melakukan subscribe ', e.message);
-                            });
-                        });
-                    }
-                });
-
-            }
-        }
-
-        function urlBase64ToUint8Array(base64String) {
-            const padding = '='.repeat((4 - base64String.length % 4) % 4);
-            const base64 = (base64String + padding)
-                .replace(/-/g, '+')
-                .replace(/_/g, '/');
-            const rawData = window.atob(base64);
-            const outputArray = new Uint8Array(rawData.length);
-            for (let i = 0; i < rawData.length; ++i) {
-                outputArray[i] = rawData.charCodeAt(i);
-            }
-            return outputArray;
-        }
-    </script>
 </body>
 
 </html>
