--- a/liga.html
+++ b/liga.html
@@ -34,21 +34,21 @@
         <div class="indeterminate" id=""></div>
     </div>
     <div class="liga container">
-
+        <h3 class="center">Choose Leauge</h3>
         <div class="row center" id="body-render-liga">
 
         </div>
         <div class="center" id="body-render-country-liga"></div>
-        <div class="center" id="button">
-            <a class="waves-effect waves-light btn col s12 m12" id="btnBackFavorite" href="./index.html#favorite"><i
+        <div class="center col s12" id="button">
+            <a class="waves-effect waves-light btn Data Tidak Tersedia " id="btnBackFavorite" href="./index.html#favorite" ><i
                     class="material-icons left">arrow_back</i>Back To Favorite</a>
             <br>
-            <a class="waves-effect waves-light col s12 m12 btn" id="delete" href="index.html#favorite"><i
+            <a class="waves-effect waves-light Data Tidak Tersedia btn" id="delete" href="index.html#favorite" ><i
                     class="material-icons left">delete</i>Delete</a>
-            <a class="waves-effect waves-light col s12 12 btn" id="back" href="index.html"><i
+            <a class="waves-effect waves-light Data Tidak Tersedia btn" id="back" href="index.html" ><i
                     class="material-icons left">arrow_back</i>Back</a>
             <br>
-            <a class="waves-effect waves-light col s12 m12 btn" id="add"><i class="material-icons left">add</i>Add
+            <a class="waves-effect waves-light Data Tidak Tersedia btn" id="add"><i class="material-icons left">add</i>Add
                 to
                 favourite</a>
 
