--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <h3 class="center">Search Your Areas</h3>
+    <h3 class="center">Choose Country</h3>
     <div class="row" id="country">
 
     </div>
