--- a/team.html
+++ b/team.html
@@ -34,8 +34,8 @@
         <div class="indeterminate" id=""></div>
     </div>
 
-    <div class="liga container">
-
+    <div class="team container">
+        <h3 class="center">Standings</h3>
         <div class="row center">
             <table class="responsive-table">
                 <thead>
